--- a/index.css
+++ b/index.css
@@ -5,13 +5,13 @@ body {
 	line-height: 1.2em;
 	color: rgb(49, 49, 49);
 	text-align: left;
-	text-shadow: 1px 1px #ffffff;
-    padding: 25px;
+    text-shadow: 1px 1px #f5f5f5;
+    padding: 3%;
 
-    margin-left: 75px;
-    margin-right: 75px;
-    margin-top: 37.5px;
-    margin-bottom: 37.5px;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 
 }
 
@@ -30,24 +30,14 @@ a {
 a:hover {
     color:#f5f5f5;
     animation-duration: 5s;
-    border-radius: 2px;
+    border-radius: 0.2%;
 }
 
 
 /* TOPNAV */
 .topnav {
-    background-color: rgb(201, 173, 210);
-    padding: 5px 15px;
-    word-wrap: normal;
-}
-    /* TOPNAV LINKS */
-.topnav a {
-    color: rgb(0, 0, 0);
-    font-family: 'Courier New', Consolas, monospace; 
-}
-
-.topnav a:hover {
-    color:#f5f5f5;
-    animation-duration: 5s;
-    border-radius: 2px;
+        background-color: rgb(201, 173, 210);
+        text-shadow: 1px 1px #ffffff;
+        padding: 0.6% 1.5%;
+        word-wrap: normal;
 }
