--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 /* BODY */
+
 body {
-	background-color: #f5f5f5;
+	background-color: #fffff0;
 	font-family: 'Courier New', Consolas, sans-serif, monospace;
 	line-height: 1.2em;
 	color: rgb(49, 49, 49);
 	text-align: left;
-    text-shadow: 1px 1px #f5f5f5;
     padding: 3%;
 
     margin-left: 3%;
@@ -15,29 +15,50 @@ body {
 
 }
 
-/* ? */
-#update {
-    margin: 0;
-    display: inline-block;
+/* TOPNAV */
+
+.topnav {
+    background-color: rgb(244, 211, 255);
+    padding: 0.6% 1.5%;
+    word-wrap: normal;
 }
 
-/* LINKS */
-a {
-    color: rgb(49, 49, 49);
+.topnav a {
+    color:rgb(49, 49, 49);
     font-family: 'Courier New', Consolas, monospace;
 }
 
-a:hover {
-    color:#f5f5f5;
+.topnav a:hover {
+    color: #fffff0 ;
+    animation-duration: 5s;
+    border-radius: 0.2%;
+}
+
+/* LEFT : BLOG */
+
+.writing a {
+    color:rgb(49, 49, 49);
+    font-family: 'Courier New', Consolas, monospace;
+}
+
+.writing a:hover {
+    color: rgb(244, 211, 255) ;
     animation-duration: 5s;
     border-radius: 0.2%;
 }
 
 
-/* TOPNAV */
-.topnav {
-        background-color: rgb(201, 173, 210);
-        text-shadow: 1px 1px #ffffff;
-        padding: 0.6% 1.5%;
-        word-wrap: normal;
+
+.blog-entry {
+    margin: 0;
+    background-color:rgb(244, 211, 255);
+    padding: 3%;
+    font-family:Arial, Helvetica;
+    line-height: 1.1em;
+    
+}
+
+.blog-entry a {
+    color:rgb(49, 49, 49);
+    font-family: Arial, Helvetica, sans-serif;
 }
