--- a/index.css
+++ b/index.css
@@ -17,39 +17,39 @@ body {
 
 /* TOPNAV */
 
-.topnav {
+div.topnav {
     background-color: #f0e6fa;
     padding: 0.6% 1.5%;
     word-wrap: normal;
 }
 
-.topnav a {
+div.topnav a {
     color:#313131;
     font-family: 'Courier New', Consolas, monospace;
 }
 
-.topnav a:hover {
-    color: #fffff0 ;
+div.topnav a:hover {
+    color: #fffdf8 ;
     animation-duration: 5s;
     border-radius: 0.2%;
 }
 
 /* LEFT : BLOG */
 
-.writing a {
-    color:rgb(49, 49, 49);
+div.writing a {
+    color:#313131;
     font-family: 'Courier New', Consolas, monospace;
 }
 
-.writing a:hover {
-    color: #fffdf8 ;
+div.writing a:hover {
+    color: #f0e6fa ;
     animation-duration: 5s;
     border-radius: 0.2%;
 }
 
 
 
-.blog-entry {
+article.blog-entry {
     margin: 0;
     background-color:#e8e8e8;
     padding: 3%;
@@ -58,9 +58,77 @@ body {
     
 }
 
-.blog-entry a {
+article.blog-entry a {
     color:#313131;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+/* RIGHT : GALLERY -- CREDITS: https://timnwells.medium.com/create-a-simple-responsive-image-gallery-with-html-and-css-fcb973f595ea*, */
+
+div.gallery-items {
+    column-count: 4;
+    column-gap: 2%;
+}
+
+div.gallery-items img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 2%;
+}
+
+@media (max-width: 1200px) {
+    div.gallery-items {
+        column-count: 4;
+    }
+}
+
+@media (max-width: 1000px) {
+    div.gallery-items {
+        column-count: 3;
+    }
+}
+
+@media (max-width: 800px) {
+    div.gallery-items {
+        column-count: 2;
+    }
+}
+
+@media (max-width: 400px) {
+    div.gallery-items {
+        column-count: 1;
+    }
+}
+
+    /*GALLERY DESCRIPTION*/
+
+div.container {
+    position:relative;
+}
+
+div.middle {
+    transition: 0.5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%)
+}
+
+div.container:hover img {
+    opacity: 0.75;
+}
+
+div.container:hover .middle {
+    opacity: 0.75;
+}
+
+div.text {
+    background-color: #fffdf8;
+    color: #313131;
+    font-size: 100%;
+    padding: 5% 10%;
 }
 
 
@@ -79,7 +147,7 @@ footer {
     text-align: center;
 }
 
-.contact a {
+div.contact a {
     color:rgb(49, 49, 49);
     font-family: 'Courier New', Consolas, monospace;
     
