--- a/index.css
+++ b/index.css
@@ -141,7 +141,7 @@ footer {
     width: 100%;
     height: 5%;     /*better align text in center*/
     margin-top: 3%;
-    background-color: #efefef;
+    background-color: #f0e6fa;
     color:rgb(49, 49, 49);
     font-size: medium;
     text-align: center;
