--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body {
 /* TOPNAV */
 
 div.topnav {
-    background-color: #f0e6fa;
+    background-color: #E5E4E2;
     padding: 0.6% 1.5%;
     word-wrap: normal;
 }
@@ -36,13 +36,14 @@ div.topnav a:hover {
 
 /* LEFT : BLOG */
 
+
 div.writing a {
     color:#313131;
     font-family: 'Courier New', Consolas, monospace;
 }
 
 div.writing a:hover {
-    color: #f0e6fa ;
+    color: #fffdf8 ;
     animation-duration: 5s;
     border-radius: 0.2%;
 }
@@ -51,7 +52,7 @@ div.writing a:hover {
 
 article.blog-entry {
     margin: 0;
-    background-color:#e8e8e8;
+    background-color:#E5E4E2;
     padding: 3%;
     font-family:Arial, Helvetica;
     line-height: 1.1em;
@@ -63,92 +64,27 @@ article.blog-entry a {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* RIGHT : GALLERY -- CREDITS: https://timnwells.medium.com/create-a-simple-responsive-image-gallery-with-html-and-css-fcb973f595ea*, */
-
-div.gallery-items {
-    column-count: 4;
-    column-gap: 2%;
-}
-
-div.gallery-items img {
-    width: 100%;
-    height: auto;
-    margin-bottom: 2%;
-}
-
-@media (max-width: 1200px) {
-    div.gallery-items {
-        column-count: 4;
-    }
-}
-
-@media (max-width: 1000px) {
-    div.gallery-items {
-        column-count: 3;
-    }
-}
-
-@media (max-width: 800px) {
-    div.gallery-items {
-        column-count: 2;
-    }
-}
-
-@media (max-width: 400px) {
-    div.gallery-items {
-        column-count: 1;
-    }
-}
-
-    /*GALLERY DESCRIPTION*/
-
-div.container {
-    position:relative;
-}
-
-div.middle {
-    transition: 0.5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%)
-}
-
-div.container:hover img {
-    opacity: 0.75;
-}
-
-div.container:hover .middle {
-    opacity: 0.75;
-}
-
-div.text {
-    background-color: #fffdf8;
-    color: #313131;
-    font-size: 100%;
-    padding: 5% 10%;
-}
 
 
 /* FOOTER */    /*CONTACT*/
 
+
 footer {
-    position: static;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 5%;     /*better align text in center*/
-    margin-top: 3%;
-    background-color: #f0e6fa;
-    color:rgb(49, 49, 49);
-    font-size: medium;
+    background-color: #E5E4E2;
+    padding: 0.6% 1.5%;
+    word-wrap: normal;
+    margin-top: 5%;
     text-align: center;
 }
 
 div.contact a {
-    color:rgb(49, 49, 49);
+    color:#313131;
     font-family: 'Courier New', Consolas, monospace;
-    
 }
+
+div.contact a:hover {
+    color: #fffdf8 ;
+    animation-duration: 5s;
+    border-radius: 0.2%;
+}
+
