changed margin of blog entries

--- a/index.css
+++ b/index.css
@@ -56,6 +56,7 @@ article.blog-entry {
     padding: 3%;
     font-family:Arial, Helvetica;
     line-height: 1.1em;
+    margin-top: 3%; 
     
 }
 
